# CloudXR

./: README.md
arcore-android-sdk/samples/hello_cloudxr_c/: README.md  build.gradle  license.txt  readme.txt
arcore-android-sdk/samples/hello_cloudxr_c/app/: CMakeLists.txt  build.gradle  dummy.jks
arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/: AndroidManifest.xml
arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/assets/shaders/: screenquad.frag
arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/cpp/: CloudXRClientOptions.h  CloudXRLaunchOptions.h  CloudXRMatrixHelpers.h  CloudXROptionsParser.h  background_renderer.cc  background_renderer.h  blitter.cc  blitter.h  hello_ar_application.cc  hello_ar_application.h  jni_interface.cc  plane_renderer.cc  util.cc  util.h
arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/java/com/nvidia/ar/hellocloudxr/: HelloArActivity.java  JniInterface.java  PermissionHelper.java  ServerIPDialog.java
arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/res/layout/: activity_main.xml  startup_dialog.xml
arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/res/values/: strings.xml
